# jaqpotpy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  ForDevelopers.md  INTEGRATION_TEST_STRATEGY.md  LICENSE  New_ONNX_structure.py  OFFLINE_MODEL.md  README.md  REFACTORING_PLAN.md  Smiles_fingerprints.jdb  Train_data_SCF.csv  alt_run_locally_externaldescriptorsonly.py  async_t.py  example_classification_StringLabels.py  external_df.csv  generate_markdown.py  graph_example.py  graph_torchscript.py  high_level_usage.py  high_level_usage.py.sb-87d07ad5-83342V  jaqpot_dataset.csv  jaqpot_model.py  lstm_classification.py  lstm_regression.py  nanomaterial_classification.py  one_hot_encoding_example.py  onnx_example.py  preprocessing_example.py  pyproject.toml  pyvenv.cfg  requirements.in  requirements.txt  requirements_no_pytorch.txt  ruff.toml  run_locally.py  run_locally_SMILESandexternal.py  run_locally_experimental_descriptors.py  run_locally_externaldescriptorsonly.py  sdk_testing.py  (+8 more)
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  openapi_generate.yml  pipy_release.yml
dockerfiles/: Dockerfile
docs/: about.md  index.md
docs/site/: 404.html  index.html
docs_jaqpotpy_torch/jaqpotpy_torch/: index.md
docsify/: README.md  _coverpage.md  _sidebar.md  index.html
docsify/jaqpotpy/: README.md  about.md  index.md
etc/: Update_Features.py  generate-pydoc-markdown.sh  openapi-generate.sh  publish.sh
examples/: 1iep_ligand_minimized.pdbqt  1iep_ligand_vina_out.pdbqt  Python_SDK.ipynb  advanced_regression_demo_with_sklearn.py  classification_SKLearn_model.py  domain_of_applicability.py  downloaded_model_example.py  evaluate_test_example.py  example_classification_StringLabels.py  feature_selection_example.py  featurizers.py  gen_tests.py  generative.py  graph_onnx_classif.py  graph_torchscript_example.py  high_level_usage.py  local_model_example.py  logistic_regression.py  model_evaluation.py  multiple_featurizers_and_feature_selection.py  offline_model_example.py  one_hot_encoding_example.py  onnx_example.py  onnx_example_classification.py  onnx_example_regression.py  onnx_example_regression_feature_selection.py  onnx_example_xgboost.py  preprocessing_and_featurizers.py  preprocessing_example.py  pytdc.py  regression_PyTorch_geometric_model.py  regression_SKLearn_model.py  sdk_test.py  sdk_testing.py  sequence_example.py  tdc_examples.py  torch.py  torch_example.py  torch_mlp.py  torch_regression_example.py  (+3 more)
examples/PyTorch_examples/: classification_PyTorch_geometric_model.py  conv_pytorch_onnx_model.py  (+4 more)
examples_old/: evaluate_test_example.py  example_classification_StringLabels.py  feature_selection_example.py  graph_onnx_reg.py  one_hot_encoding_example.py  onnx_example_xgboost.py  preprocessing_example.py  sdk_testing.py  upload_on_jaqpot_example.py
jaqpotpy/: # Jaqpot Documentation.md  __init__.py  base_client.py  jaqpot.py  jaqpot_local.py
jaqpotpy-docs/: mkdocs.yml
local_tests/: External_data_model.py  Smiles_data_model.py  external_df.csv  only_external.py  onnx_example.py  test_applicability.py
run_tests/: run_tests.py  test_logs-2022-11-25-14.44.02.915289
sphinx_docs/: README.md  conf.py  index.rst  src.api.openapi.api.rst  src.api.openapi.models.rst  src.api.openapi.rst  src.api.rst  src.colorlog.rst  src.datasets.rst  src.datasets.tests.rst  src.descriptors.graph.rst  src.descriptors.molecular.rst  src.descriptors.rst  src.descriptors.tests.rst  src.descriptors.tokenizer.rst  src.doa.rst  src.doa.tests.rst  src.exceptions.rst  src.helpers.rst  src.models.rst  src.models.tests.rst  src.models.torch_geometric_models.rst  src.models.torch_models.rst  src.models.trainers.graph_trainers.rst  src.models.trainers.rst  src.models.trainers.sequence_trainers.rst  src.rst
src/: jaqpot.py
(+906 files in other folders)
