[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaqpotpy"
dynamic = ["version"]
description = "Client library for managing machine learning models on the Jaqpot platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.0.0",
    "onnx==1.17.0",
    "onnxmltools>=1.12.0",
    "onnxruntime>=1.19.0",
    "skl2onnx>=1.17.0",
    "httpx",
    "polling2>=0.5.0",
    "pydantic>=2.0",
    "requests>=2.32.2",
    "jaqpot-api-client>=6.43.0",
    "rdkit>=2023.9.6",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "setuptools>=75.0.0",
    "python-keycloak>=4.3.0",
    "jaqpot-python-sdk>=6.0.2",
    "torch-geometric>=2.5.0",
    "xgboost>=2.1.1"
]

[[project.authors]]
name = "Unit of Process Control and Informatics | National Technical University of Athens"
email = "upci.ntua@gmail.com"

[project.urls]
Homepage = "https://github.com/ntua-unit-of-control-and-informatics/jaqpotpy"

[tool.hatch.version]
path = "jaqpotpy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/jaqpotpy",
]
